--- a/mi-aplicacion/src/components/Header/HeaderPhone.css
+++ b/mi-aplicacion/src/components/Header/HeaderPhone.css
@@ -88,7 +88,7 @@
     width: 100%;
     height: 100vh;
     background-color: var(--corporative-color);
-    padding-top: 220px;
+    padding-top: 145px;
     z-index: 1100;
     overflow-y: auto;
     opacity: 0;
@@ -144,17 +144,18 @@
 
 .nav-phone-link {
     text-decoration: none;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     color: var(--light-color);
-    font-size: 0.8rem;
-    font-weight: 400;
+    font-size: 1rem;
+    font-weight: 100;
     transition: color 0.3s;
     display: block;
-    padding: 0.5rem;
+    padding: 0rem;
 }
 
 .nav-phone-text {
     text-align: center;
+    font-family: var(--serif-one-font);
 }
 
 .nav-phone-link:hover {
