--- a/mi-aplicacion/src/pages/Buy/Buy.css
+++ b/mi-aplicacion/src/pages/Buy/Buy.css
@@ -12,7 +12,8 @@
   /* Para teléfonos móviles */
   @media screen and (max-width: 480px) {
     .buy-wrapper {
-      padding-top: 6.5rem;
+      /* padding-top: 6.5rem; */
+      padding-top: 0rem;
     }
   }
   
