--- a/mi-aplicacion/src/pages/Buy/components/BuyForm.css
+++ b/mi-aplicacion/src/pages/Buy/components/BuyForm.css
@@ -109,7 +109,7 @@ textarea:focus {
 
 .radio-group {
     display: flex;
-    align-items: center;
+    align-items: left;
     gap: 0.5rem;
     cursor: pointer;
 }
@@ -120,9 +120,10 @@ textarea:focus {
 
 .radio-label {
     display: flex;
-    align-items: center;
+    /* align-items: left; */
     gap: 0.5rem;
     cursor: pointer;
+    margin-bottom: 0;
 }
 
 .budget-input {
@@ -246,11 +247,13 @@ textarea:focus {
   /* Para teléfonos móviles */
   @media screen and (max-width: 480px) {
     .picture-form {
-      padding: 0 1rem 1.5rem 1rem;
-    }
+      /* padding: 0 1rem 1.5rem 1rem; */
+padding: 0rem;    }
     
     .picture-form img {
-      border-radius: 30% 30% 30% 30% / 50% 50% 50% 50%; /* Bordes aún más suaves */
+      /* border-radius: 30% 30% 30% 30% / 50% 50% 50% 50%;  */
+      border-radius: 0%;
+      height: 50vh;
     }
     
     .buy-form-container {
