--- a/mi-aplicacion/src/pages/LandingPage/components/PropertiesLand.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/PropertiesLand.css
@@ -179,7 +179,7 @@
     .propertiesland-right h3 {
         font-size: 1rem;
         margin-bottom: 2rem;
-        border-top: 1px solid var(--dark-color);
+        border-top: 1px solid var(--corporative-color);
         padding-top: 3rem;
     }
 
