--- a/mi-aplicacion/src/pages/Sell/components/SellForm.css
+++ b/mi-aplicacion/src/pages/Sell/components/SellForm.css
@@ -94,10 +94,11 @@ textarea:focus {
 
 .radio-label {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     gap: 0.5rem;
     cursor: pointer;
     background-color: transparent;
+    margin-bottom: 0;
     
 }
 
@@ -199,17 +200,21 @@ textarea:focus {
     .sell-form-container {
       max-width: 100%;
       padding: 0 1rem;
-      margin-top: 2rem;
+      margin-top: 0rem;
       margin-bottom: 2rem;
     }
     
     .form-title-sell {
       font-size: 1.8rem;
+      text-align: left;
     }
+
     
     .form-description-sell {
       font-size: 0.9rem;
       margin-bottom: 1.5rem;
+      text-align: left;
+
     }
     
     .name-fields {
