añadido un controlador de eventos onClick al enlace del logo en el componente Header con expresion condicional toggleMenu para que solo se ejecute si el menu esta abierto

--- a/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
@@ -119,7 +119,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--dark-color);
+  background-color: var(--nude-color);
   /* Color corporativo */
   opacity: 1;
   /* Intensidad del efecto - ajusta según necesites */
