--- a/mi-aplicacion/src/pages/Contact/Contact.css
+++ b/mi-aplicacion/src/pages/Contact/Contact.css
@@ -1,268 +1,250 @@
 .contact-wrapper {
-    display: flex;
-    flex-direction: column;
-    padding-top: 10rem;
+  display: flex;
+  flex-direction: column;
+  padding-top: 10rem;
 }
 
 .welcome-contact {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 0rem 3rem;
-    /* border-bottom: 1px solid var(--taupe-color); */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0rem 3rem;
 }
-.welcome-contact h1 {
-    /* border-bottom: 1px solid var(--taupe-color); */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;}
-.line-1, .line-2, .line-3{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 100;
-    color: var(--dark-color);
-}
-.line-1 {
-    /* font-weight: bold; */
-    /* display: block; */
-    font-size: 3rem;
-    width: 61%;
 
-  }
-  
-  .line-2 {
-    /* font-style: italic; */
-    font-size: 1rem;
-    width: 40%;
-    font-family: 'Scto Grotesk A', Helvetica, Arial, sans-serif;
-  }
-  
-  .line-3 {
-    font-size: 1rem;
-    margin-bottom: 2rem;
-  }
+.welcome-contact h1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.line-1,
+.line-2,
+.line-3 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 100;
+  color: var(--dark-color);
+}
+
+.line-1 {
+  font-size: 3rem;
+  width: 61%;
+}
+
+.line-2 {
+  font-size: 1rem;
+  width: 40%;
+  font-family: 'Scto Grotesk A', Helvetica, Arial, sans-serif;
+}
+
+.line-3 {
+  font-size: 1rem;
+  margin-bottom: 2rem;
+}
 
 .picture-and-text {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 3rem;
-    color: var(--dark-color);
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 3rem;
+  color: var(--dark-color);
 }
-
-/* .contact-info {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 0 3rem;
-    font-weight: 100;
-    border-radius: 50% 50% 50% 50% / 35% 35% 35% 35%;
-    border: 1px solid var(--taupe-color);
-    aspect-ratio: 3/4.5;
-    background-color: var(--light-color);
-} */
 
 .contact-info {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    box-sizing: border-box; /* Asegura que el padding esté incluido en el tamaño total */
-    padding: 0 3rem; /* El padding exterior */
-    font-weight: 100;
-    /* aspect-ratio: 3/4.5; */
-    height: auto;
-    position: relative; /* Para el pseudo-elemento */
-    overflow: hidden; /* Para que el pseudo-elemento no se salga */
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 0 3rem;
+  font-weight: 100;
+  height: auto;
+  position: relative;
+  overflow: hidden;
 }
 
-/* Usar un pseudo-elemento para crear el borde interno */
 .contact-info::before {
-    content: '';
-    position: absolute;
-    /* top: 3rem;  */
-    left: 3rem; /* Igual al padding izquierdo */
-    right: 3rem; /* Igual al padding derecho */
-    /* bottom: 3rem;  */
-    height: calc(100% - 0.2rem);
-    border: 1px solid var(--taupe-color);
-    border-radius: 50% 50% 50% 50% / 35% 35% 35% 35%;
-    background-color: var(--light-color);
-    z-index: -1; /* Colocar detrás del contenido */
+  content: '';
+  position: absolute;
+  left: 3rem;
+  right: 3rem;
+  height: calc(100% - 0.2rem);
+  border: 1px solid var(--taupe-color);
+  border-radius: 50% 50% 50% 50% / 35% 35% 35% 35%;
+  background-color: var(--light-color);
+  z-index: -1;
 }
 
 
 
 .contact-info h1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
+
 .contact-location {
-    color: var(--taupe-color);
+  color: var(--taupe-color);
 }
-.contact-info h4{
-    padding-top: 1rem;
-    margin-bottom: 0;
-    text-transform: uppercase;
-    font-weight: 400;
+
+.contact-info h4 {
+  padding-top: 1rem;
+  margin-bottom: 0;
+  text-transform: uppercase;
+  font-weight: 400;
 }
-.contact-info h5{
-    margin-bottom: 0;
+
+.contact-info h5 {
+  margin-bottom: 0;
 }
 
 .contact-picture {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0 3rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 3rem;
 }
 
 .contact-picture img {
-    width: 100%;
-    /* height: auto; */
-    aspect-ratio: 3/4.5;
-
-    object-fit: cover;
-    /* max-width: 580px; */
-    border-radius: 50% 50% 50% 50% / 35% 35% 35% 35%;
-    object-fit: cover;
-    object-position: center;
+  width: 100%;
+  aspect-ratio: 3/4.5;
+  object-fit: cover;
+  border-radius: 50% 50% 50% 50% / 35% 35% 35% 35%;
+  object-fit: cover;
+  object-position: center;
 }
 
 
 /* Media queries para tablets */
 @media screen and (max-width: 768px) {
-    .contact-wrapper {
-      padding-top: 6rem;
-    }
-    
-    .welcome-contact {
-      padding: 0 1.5rem;
-    }
-    
-    .line-1 {
-      font-size: 2.2rem;
-      width: 90%;
-    }
-    
-    .line-2 {
-      font-size: 0.9rem;
-      width: 70%;
-    }
-    
-    .line-3 {
-      font-size: 0.9rem;
-      margin-bottom: 1.5rem;
-    }
-    
-    .picture-and-text {
-      flex-direction: column;
-      margin-bottom: 2rem;
-      /* margin-top: 2rem; */
-    }
-    
-    .contact-info {
-      padding: 2rem 1.5rem;
-      margin-bottom: 2rem;
-    }
-    
-    .contact-info::before {
-      left: 1.5rem;
-      right: 1.5rem;
-    }
-    
-    .contact-picture {
-      padding: 0 1.5rem;
-    }
-    
-    .contact-picture img {
-      max-width: 100%;
-      aspect-ratio: 3/4;
-      border-radius: 50%;
-    }
+  .contact-wrapper {
+    padding-top: 6rem;
   }
-  
-  /* Para teléfonos móviles */
-  @media screen and (max-width: 480px) {
-    .contact-wrapper {
-      padding-top: 5.5rem;
-    }
-    
-    .welcome-contact {
-      padding: 0 1.1rem;
-    }
-    
-    .line-1 {
-      font-size: 1.8rem;
-      width: 100%;
-    }
-    
-    .line-2 {
-      font-size: 0.85rem;
-      width: 90%;
-    }
-    
-    .line-3 {
-      font-size: 0.85rem;
-      margin-bottom: 1.2rem;
-    }
-    
-    .contact-info {
-      padding: 1.5rem 1rem;
-      margin-top: 2rem;
-    }
-    
-    .contact-info::before {
-      left: 1rem;
-      right: 1rem;
-      border-radius: 50% 50% 50% 50% / 40% 40% 40% 40%;
-    }
-    
-    .contact-picture {
-      padding: 0 1rem;
-    }
-    
-    .contact-picture img {
-        border-radius: 50% 50% 50% 50% / 40% 40% 40% 40%;
-    }
-    
-    .contact-info h4 {
-      font-size: 0.9rem;
-      padding-top: 0.7rem;
-    }
-    
-    .contact-info h5 {
-      font-size: 0.85rem;
-    }
+
+  .welcome-contact {
+    padding: 0 1.5rem;
   }
-  
-  /* Para teléfonos muy pequeños */
-  @media screen and (max-width: 360px) {
-    .line-1 {
-      font-size: 1.5rem;
-    }
-    
-    .line-2, .line-3 {
-      font-size: 0.8rem;
-    }
-    
-    .contact-info::before {
-      border-radius: 30% 30% 30% 30% / 20% 20% 20% 20%;
-    }
-    
-    .contact-picture img {
-      border-radius: 30% 30% 30% 30% / 20% 20% 20% 20%;
-    }
+
+  .line-1 {
+    font-size: 2.2rem;
+    width: 90%;
   }
+
+  .line-2 {
+    font-size: 0.9rem;
+    width: 70%;
+  }
+
+  .line-3 {
+    font-size: 0.9rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .picture-and-text {
+    flex-direction: column;
+    margin-bottom: 2rem;
+    /* margin-top: 2rem; */
+  }
+
+  .contact-info {
+    padding: 2rem 1.5rem;
+    margin-bottom: 2rem;
+  }
+
+  .contact-info::before {
+    left: 1.5rem;
+    right: 1.5rem;
+  }
+
+  .contact-picture {
+    padding: 0 1.5rem;
+  }
+
+  .contact-picture img {
+    max-width: 100%;
+    aspect-ratio: 3/4;
+    border-radius: 50%;
+  }
+}
+
+/* Para teléfonos móviles */
+@media screen and (max-width: 480px) {
+  .contact-wrapper {
+    padding-top: 5.5rem;
+  }
+
+  .welcome-contact {
+    padding: 0 1.1rem;
+  }
+
+  .line-1 {
+    font-size: 1.8rem;
+    width: 100%;
+  }
+
+  .line-2 {
+    font-size: 0.85rem;
+    width: 90%;
+  }
+
+  .line-3 {
+    font-size: 0.85rem;
+    margin-bottom: 1.2rem;
+  }
+
+  .contact-info {
+    padding: 1.5rem 1rem;
+    margin-top: 2rem;
+  }
+
+  .contact-info::before {
+    left: 1rem;
+    right: 1rem;
+    border-radius: 50% 50% 50% 50% / 40% 40% 40% 40%;
+  }
+
+  .contact-picture {
+    padding: 0 1rem;
+  }
+
+  .contact-picture img {
+    border-radius: 50% 50% 50% 50% / 40% 40% 40% 40%;
+  }
+
+  .contact-info h4 {
+    font-size: 0.9rem;
+    padding-top: 0.7rem;
+  }
+
+  .contact-info h5 {
+    font-size: 0.85rem;
+  }
+}
+
+/* Para teléfonos muy pequeños */
+@media screen and (max-width: 360px) {
+  .line-1 {
+    font-size: 1.5rem;
+  }
+
+  .line-2,
+  .line-3 {
+    font-size: 0.8rem;
+  }
+
+  .contact-info::before {
+    border-radius: 30% 30% 30% 30% / 20% 20% 20% 20%;
+  }
+
+  .contact-picture img {
+    border-radius: 30% 30% 30% 30% / 20% 20% 20% 20%;
+  }
+}
