pequeño cambio en individual home page en css

--- a/mi-aplicacion/src/pages/IndividualHome/IndividualHome.css
+++ b/mi-aplicacion/src/pages/IndividualHome/IndividualHome.css
@@ -190,7 +190,7 @@
   font-weight: 400;
   width: 100%;
   line-height: 2.25rem;
-  font-style: italic;
+  /* font-style: italic; */
   color: var(--dark-color);
   text-align: justify;
   /* Justifica el texto */
