--- a/mi-aplicacion/src/index.css
+++ b/mi-aplicacion/src/index.css
@@ -50,11 +50,11 @@ body {
 }
 
 :root {
-  --corporative-color: #144869;
+  --corporative-color: #18243A;
   --light-color: #F1F1ED;
   --light-transparent-color: #f1f1edc7;
   --light-transparent-gradient: linear-gradient(to top, rgba(243, 241, 233, 0.8), rgba(243, 241, 233, 0));
-  --nude-color: #E1D7D0;
+  --nude-color: #EEE7DD;
   --taupe-color: #A68F6D;
   --dark-color: #3B3B3C;
 
