--- a/mi-aplicacion/src/components/Footer/Footer.css
+++ b/mi-aplicacion/src/components/Footer/Footer.css
@@ -197,7 +197,6 @@
     width: 80px;
   }
   
-  /* Nuevo estilo para footer-four */
   .footer-four {
     display: flex;
     flex-direction: row;
@@ -207,6 +206,9 @@
     text-align: center;
     justify-content: center;
   }
+  .footer-four .first-child {
+    margin-top: 1rem;
+  }
   
   .footer-four a {
     margin-right: 1rem;
@@ -215,7 +217,6 @@
   }
 }
 
-/* Para teléfonos muy pequeños */
 @media screen and (max-width: 480px) {
   .footer-wrapper {
     padding: 1.5rem 1rem;
@@ -239,9 +240,27 @@
     gap: 1rem;
   }
 
-  /* Ajustes para el footer-four en móviles muy pequeños */
   .footer-four a {
     margin-right: 0.7rem;
     margin-bottom: 0.4rem;
   }
+
+  .footer-four {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 1rem;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+  }
+  .footer-four .first-child {
+    margin-top: 1rem;
+  }
+
+  .footer-foot {
+    /* padding: 1.5rem 3rem; */
+    display: flex;
+    flex-direction: column-reverse;  }
 }
+
