--- a/mi-aplicacion/src/pages/Buy/components/BuyForm.css
+++ b/mi-aplicacion/src/pages/Buy/components/BuyForm.css
@@ -4,60 +4,151 @@
 }
 
 .picture-form {
-  flex: 0.55;
+  flex: 0.52;
+  display: flex;
   padding: 0rem 3rem;
-  padding-right: 2rem;
+  /* padding-right: 2rem; */
   box-sizing: border-box;
-
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .picture-form img {
   width: 100%;
   height: auto;
-  object-fit: cover;
-  border-radius: 50% 50% 50% 50% / 35% 35% 35% 35%;
+  object-fit: contain;
+  margin-bottom: 23rem;
+  /* border-radius: 50% 50% 50% 50% / 35% 35% 35% 35%; */
 }
 
+/* .picture-form img:nth-child(2) {
+  width: 50%;
+} */
+
 .buy-form-container {
-  flex: 0.45;
+  flex: 0.48;
   max-width: 800px;
   margin: 0 auto;
-  padding: 1rem 5rem;
+  padding: 5rem 5rem;
   color: var(--dark-color);
   margin-bottom: 5rem;
   box-sizing: border-box;
 }
 
-.form-title {
+.buy-form-container .form-title {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 2.5rem;
   font-weight: 400;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   margin-top: 0;
 }
 
-.form-description {
+.buy-form-container .form-description {
   font-size: 1.1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
   line-height: 1.6;
+  font-weight: 200;
+  width: 80%;
 }
 
-.buy-form {
+.buy-form-container .buy-form {
   display: flex;
   flex-direction: column;
   gap: 0rem;
 }
 
-.form-section {
-  border-bottom: 1px solid #eee;
-  padding-bottom: 0rem;
+.buy-form-container .form-section {
+  border-bottom: none;
+  padding-bottom: 1rem;
 }
 
-.form-section h3 {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: 1.3rem;
-  font-weight: 400;
+/* Sección 1: Agrupa nombre, teléfono y email con una separación más fuerte */
+.buy-form-container .form-section:nth-child(3) {
+  /* Email es la tercera sección */
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+}
+
+/* Sección 2: Agrupa todas las especificaciones */
+.buy-form-container .form-section:nth-child(4) {
+  /* Especificaciones es la cuarta sección */
+  padding-top: 1rem;
+}
+
+.buy-form-container .form-section:nth-child(4) .form-group:last-child {
+  margin-bottom: 2rem;
+}
+
+.buy-form-container .form-section:nth-child(4) {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 1rem;
+  margin-bottom: 2rem;
+}
+
+/* Sección 3: Desde "Vendiendo" hasta el final */
+/* .form-section:nth-child(5) { 
+  padding-top: 1rem;
+} */
+/* Sección 3: Vendiendo? */
+.buy-form-container .form-section:nth-child(5) {
+  /* Vendiendo es la quinta sección */
+  padding-top: 1rem;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 2rem;
+  margin-bottom: 2rem;
+}
+
+/* Sección 4: Otros criterios */
+.buy-form-container .form-section:nth-child(6) {
+  /* Otros criterios es la sexta sección */
+  padding-top: 1rem;
+}
+
+.buy-form-container .form-section h3 {
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
+  font-size: 0.8rem;
+  font-weight: 100;
+  margin-top: 0.5rem;
   margin-bottom: 1rem;
+  text-transform: uppercase;
+  letter-spacing: 1.1px;
+}
+
+/* Destacamos los encabezados de las secciones principales */
+/* .form-section:nth-child(1) h3,   */
+.buy-form-container .form-section:nth-child(4) h3,
+/* Especificaciones */
+.buy-form-container .form-section:nth-child(5) h3,
+.buy-form-container .form-section:nth-child(6) h3 {
+  /* Vendiendo */
+  font-size: 0.9rem;
+  letter-spacing: 1.2px;
+  color: var(--corporative-color);
+}
+
+/* Estilo para el placeholder en selects */
+.select-placeholder {
+  color: #999;
+  font-style: italic;
+  font-weight: 100;
+  font-size: 0.9rem;
+}
+
+select option {
+  color: var(--dark-color);
+  font-style: normal;
+}
+
+select option:first-child {
+  color: #999;
+  font-style: italic;
+}
+
+.form-section p {
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
+  margin-bottom: 0.5rem;
+  font-size: 0.8rem;
 }
 
 .name-fields {
@@ -77,10 +168,34 @@
 .form-group label {
   display: block;
   margin-bottom: 0.5rem;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 
-/* input[type="text"],
+/* Estilo para placeholders */
+input::placeholder,
+textarea::placeholder {
+  color: #999;
+  /* Color del texto */
+  font-style: italic;
+  /* Estilo de fuente */
+  font-size: 0.9rem;
+  /* Tamaño de fuente */
+  font-weight: 300;
+  /* Peso de fuente */
+  opacity: 0.7;
+  /* Opacidad */
+  transition: opacity 0.2s;
+  /* Transición al enfocar */
+}
+
+/* Cambiar estilo al enfocar */
+input:focus::placeholder,
+textarea:focus::placeholder {
+  opacity: 0.4;
+  /* Se vuelve más transparente al enfocar */
+}
+
+input[type="text"],
 input[type="tel"],
 input[type="email"],
 input[type="number"],
@@ -101,37 +216,7 @@ select:focus,
 textarea:focus {
   outline: none;
   border: 1px solid var(--corporative-color);
-} */
-
-input[type="text"],
-input[type="email"],
-input[type="tel"],
-input[type="url"],
-input[type="number"],
-select,
-textarea {
-  width: 100%;
-  padding: 0.8rem 0;
-  border: none;
-  border-bottom: 1px solid #333;
-  border-radius: 0;
-  background-color: transparent;
-  color: var(--dark-color);
-  font-size: 1rem;
-  transition: border-color 0.3s;
-  box-shadow: none;
 }
-
-input:focus,
-select:focus,
-textarea:focus {
-  outline: none;
-  border: none;
-  border-bottom: 1px solid var(--corporative-color);
-  box-shadow: none;
-}
-
-
 
 .radio-group {
   display: flex;
@@ -148,7 +233,11 @@ textarea:focus {
   display: flex;
   gap: 0.5rem;
   cursor: pointer;
-  margin-bottom: 0;
+  margin-bottom: 1rem;
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
+  /* display: block; */
+  margin-bottom: 0.5rem;
+  font-size: 0.85rem;
 }
 
 .budget-input {
@@ -168,7 +257,8 @@ textarea:focus {
 }
 
 .required {
-  color: var(--corporative-color);
+  /* color: var(--corporative-color); */
+  color: #AD4B3E;
   margin-left: 0.25rem;
 }
 
@@ -184,11 +274,11 @@ textarea:focus {
 }
 
 .error {
-  border-color: #d32f2f !important;
+  border-color: #AD4B3E !important;
 }
 
 .error-message {
-  color: #d32f2f;
+  color: #AD4B3E;
   font-size: 0.8rem;
   margin-top: 0.25rem;
   display: block;
@@ -201,7 +291,7 @@ textarea:focus {
   padding: 1rem 2rem;
   font-size: 1.1rem;
   font-weight: 500;
-  border-radius: 0px;
+  border-radius: 30px;
   cursor: pointer;
   transition: background-color 0.2s;
   margin-top: 1rem;
@@ -214,6 +304,49 @@ textarea:focus {
 .terms-section {
   margin-top: 1rem;
 }
+
+.acceptTerms {
+  font-size: 1rem;
+  font-weight: 100;
+}
+
+/* Media queries para responsive */
+/* @media screen and (max-width: 1200px) {
+  .buy-form-container {
+    padding: 3rem 3rem;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .buy-form-wrapper {
+    flex-direction: column;
+  }
+  
+  .picture-form {
+    flex: 1;
+    padding: 0;
+  }
+  
+  .buy-form-container {
+    flex: 1;
+    padding: 3rem 2rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .name-fields {
+    flex-direction: column;
+    gap: 0;
+  }
+  
+  .form-title {
+    font-size: 2rem;
+  }
+  
+  .buy-form-container {
+    padding: 2rem 1.5rem;
+  }
+} */
 
 /* Media queries para tablets medianas y pequeñas */
 @media screen and (max-width: 768px) {
@@ -233,6 +366,10 @@ textarea:focus {
     aspect-ratio: 5/3;
     object-fit: cover;
     border-radius: 35% 35% 35% 35% / 25% 25% 25% 25%;
+  }
+
+  .picture-form img:nth-child(2) {
+    display: none;
   }
 
   .buy-form-container {
@@ -270,6 +407,11 @@ textarea:focus {
     height: 50vh;
   }
 
+  .picture-form img:nth-child(2) {
+    display: none;
+  }
+
+
   .buy-form-container {
     padding: 0 1rem;
     margin-bottom: 2rem;
@@ -303,7 +445,7 @@ textarea:focus {
   }
 
   .submit-button {
-    width: 100%;
+    width: 30%;
     padding: 0.9rem;
     font-size: 1rem;
   }
