--- a/mi-aplicacion/src/pages/IndividualHome/IndividualHome.css
+++ b/mi-aplicacion/src/pages/IndividualHome/IndividualHome.css
@@ -24,11 +24,15 @@
 .individual-home-maininfo h1 {
   color: var(--dark-color);
   /* font-family: Georgia, 'Times New Roman', Times, serif; */
-  font-size: 2.4rem;
-  font-weight: 400;
+  font-family: var(--serif-one-font);
+  font-size: 2.2rem;
+  /* font-weight: 400; */
   margin-bottom: 1rem;
   text-align: center;
   line-height: 3rem;
+  text-transform: uppercase;
+  font-weight: 100;
+  width: 80%;
 }
 
 .individual-home-maininfo h3 {
@@ -43,6 +47,41 @@
   /* font-family: Georgia, 'Times New Roman', Times, serif; */
   color: var(--corporative-color);
   font-weight: 200;
+}
+
+.navigation-buttons {
+  display: flex;
+  justify-content: space-between;
+  /* Esto colocará los elementos en los extremos */
+  width: 100%;
+  /* Asegura que el contenedor ocupe todo el ancho disponible */
+  margin-top: 15px;
+}
+
+.navigation-button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px 18px;
+  border: 1px solid var(--dark-color);
+  border-radius: 30px;
+  background-color: transparent;
+  color: var(--dark-color);
+  font-size: 14px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  width: 200px;
+  margin-bottom: 1rem;
+}
+
+.navigation-button:hover {
+  background-color: transparent;
+}
+
+.navigation-buttons svg {
+  width: 18px;
+  height: 18px;
+  /* stroke-width: 0.5; */
 }
 
 
@@ -183,20 +222,21 @@
 }
 
 .column-description h1 {
-  /* margin-bottom: 10rem; */
   padding-left: 6rem;
   margin-top: 0;
   font-size: 1.3rem;
-  font-weight: 400;
+  font-weight: 200;
   width: 100%;
   line-height: 2.25rem;
-  /* font-style: italic; */
   color: var(--dark-color);
   text-align: justify;
-  /* Justifica el texto */
-  /* hyphens: auto;  */
   text-justify: inter-word;
-  /* Distribuye el espacio entre palabras */
+
+  column-count: 2;
+  /* Divide el texto en 2 columnas */
+  column-gap: 4rem;
+  /* Espacio entre columnas */
+  column-rule: 0.5px solid #eee;
 }
 
 /*4a fila*/
@@ -367,6 +407,12 @@
     margin-bottom: 3rem;
   }
 
+  .navigation-button {
+    width: 150px;
+    padding: 6px 14px;
+    font-size: 12px;
+  }
+
   .individual-home-maininfo {
     margin-top: 8rem;
     margin-left: 1.5rem;
@@ -410,6 +456,7 @@
     padding-left: 0;
     font-size: 1.1rem;
     line-height: 1.8rem;
+    column-count: 1;
   }
 
   .individual-home-totalinfo {
@@ -429,13 +476,13 @@
     width: 100%;
   }
 
-  .caracteristicas-list > div {
+  .caracteristicas-list>div {
     width: 100%;
     margin-bottom: 0.5rem;
   }
 
   /* Si hay 7 elementos, el último ocupa 1 columna completa en la segunda fila */
-  .caracteristicas-list > div:nth-child(7) {
+  .caracteristicas-list>div:nth-child(7) {
     grid-column: 1 / 2;
     grid-row: 2;
   }
@@ -463,8 +510,19 @@
     margin-right: 1rem;
   }
 
+  /* .navigation-buttons {
+    font-size: 0.6rem;
+  } */
+
+  /* .navigation-button {
+    width: 100%;
+    max-width: 200px;
+    justify-content: space-between;
+    margin-bottom: 0.5rem;
+  } */
+
   .individual-home-maininfo h1 {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     line-height: 1.8rem;
   }
 
@@ -489,7 +547,7 @@
     width: 100%;
   }
 
-  .caracteristicas-list > div {
+  .caracteristicas-list>div {
     width: 100%;
     margin-bottom: 0.5rem;
   }
@@ -514,6 +572,8 @@
   .column-description h1 {
     font-size: 1rem;
     line-height: 1.6rem;
+    column-count: 1;
+
   }
 
   .individual-home-totalinfo {
